[gd_scene load_steps=13 format=3 uid="uid://x03f7r08rodd"]

[ext_resource type="Script" path="res://MenuD.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d2mt7ko8algvs" path="res://imagem/backgroundMenu.png" id="2"]
[ext_resource type="Texture2D" uid="uid://tsfegg15wppj" path="res://imagem/logoM83.png" id="3"]
[ext_resource type="FontFile" uid="uid://n0cfhhsjf8vt" path="res://fonts/PixelOperator8-Bold.ttf" id="4"]
[ext_resource type="Script" path="res://startButton.gd" id="5"]
[ext_resource type="PackedScene" path="res://FpsLabel.tscn" id="6"]
[ext_resource type="PackedScene" path="res://menuConfiguracoes.tscn" id="7"]
[ext_resource type="AudioStream" uid="uid://dew4ira1y6gx1" path="res://music/airtone_-_spacedust_1.wav" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1020.0
offset_bottom = 699.0
texture = ExtResource("2")

[node name="LOGO" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 443.0
offset_top = -7.0
offset_right = 2411.0
offset_bottom = 1234.0
texture = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -175.0
offset_right = 331.0
offset_bottom = 428.0

[node name="startButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quitButton")
theme_override_fonts/font = SubResource("1")
text = "INICIAR"
flat = true
script = ExtResource("5")

[node name="startButton2" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quitButton")
theme_override_fonts/font = SubResource("4")
text = "CARREGAR JOGO"
flat = true

[node name="optionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "OPÇÕES"
flat = true

[node name="aboutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "SOBRE"
flat = true

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../startButton")
theme_override_fonts/font = SubResource("3")
text = "SAIR"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
autoplay = true

[node name="opcoesMenu" parent="." instance=ExtResource("7")]

[node name="FpsLabel" parent="." instance=ExtResource("6")]
layout_mode = 0

[connection signal="pressed" from="VBoxContainer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="VBoxContainer/startButton2" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="VBoxContainer/optionButton" to="." method="_on_optionButton_pressed"]
[connection signal="toggled" from="VBoxContainer/optionButton" to="." method="_on_optionButton_toggled"]
[connection signal="pressed" from="VBoxContainer/aboutButton" to="." method="_on_aboutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
